--- a/SecretHitlerFrontend/wwwroot/index.html
+++ b/SecretHitlerFrontend/wwwroot/index.html
@@ -3,18 +3,16 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>SecretHitlerFrontend</title>
+    <title>Secret Hitler Online</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
 
-<body>
-    <div id="app">Loading...</div>
-
+<body id="app">
+    <p id="Loading"></p>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
